Update to PG 17 and Java 21